portada y seccion servicios

--- a/Principal/index.html
+++ b/Principal/index.html
@@ -18,6 +18,7 @@
             background-color: rgb(77, 190, 152);
             !important
         }
+
     </style>
 </head>
 <body>
@@ -43,7 +44,31 @@
               </li>
           </ul>
       </nav>
-    </section>
+      <section class="container-fluid">
+          <main class="row">
+              <div class="col-12">
+                  <img src="../imagenes/portada.jpg" class="img-fluid" alt="">
+              </div>
+          </main>
+      </section>
+      <section class="sectionServicios container-fluid">
+          <article class="row">
+              <div class="col-xs-12 col-sm-8">
+                <ul>
+                    <li>Reparación de equipos</li>
+                    <li>Limpieza y mantenimiento de hardware</li>
+                    <li>Configuraciones y optimizaciones de softwares</li>
+                    <li>Limpieza de virus/malware</li>
+                    <li>Actualizaciones y mejoras de rendimiento</li>
+                </ul>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                  <img src="../imagenes/servicios.jpg" class="img-fluid" alt="">
+              </div>
+          </article>
+          </div>
+
+      </section>
     <!-- Código bootstrap (ignorar) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
