--- a/Principal/index.html
+++ b/Principal/index.html
@@ -67,7 +67,42 @@
               </div>
           </article>
           </div>
-
+      </section>
+      <section class="container-fluid">
+          <article class="row">
+              <div class="col-xs-12 col-sm-8">
+                  <img src="../imagenes/sobrenosotros.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                <p> Somos técnicos locales con más de 4 años de experiencia en el rubro. <br>
+                    A lo largo de nuestro camino, hemos manejado y manipulado más de <br>
+                    300 computadoras. Dedicados y apasionados con cada hardware, <br>
+                    como si fuese la primera vez que lo hacemos. <br>
+                    Contamos con amplio stock de repuestos y estamos asociados con <br>
+                    proveedores que nos proveen hardware nuevo. <br>
+                    Si tu equipo se encuentra enfermo, no dudes en contactarte con <br>
+                    nosotros y darle ese amor que necesita! Atención tanto a clientes <br>
+                    como a empresas. </p>
+              </div>
+          </article>
+      </section>
+      <section class="container-fluid">
+          <article class="row">
+              <div class="col-xs-12 col-sm-6">
+                  <img src="../imagenes/clipubicacion.png" alt="Ubicación" eight="50" width="50">
+                  <h2>Ubicación</h2>
+                  <p>Estamos ubicados en <br> 
+                    zona Parque Chacabuco (CABA) <br> 
+                    y Caseros (provincia). <br>
+                     Contactarse por cualquier vía y <br> 
+                     coordinar la visita a la zona más <br> 
+                     cercana.</p>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11041.468131416621!2d-58.438214019481286!3d-34.63833166077508!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbb7065d907f%3A0x9ce77385d2f35dd3!2sParque%20Chacabuco%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1642451711231!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22090.07553190264!2d-58.570794406039425!3d-34.61150984105897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8698cab7fa3%3A0xc4d83fe138c75b6f!2sCaseros%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1642451961437!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              </div>
+          </article>
       </section>
     <!-- Código bootstrap (ignorar) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
