--- a/Principal/index.html
+++ b/Principal/index.html
@@ -18,7 +18,9 @@
             background-color: rgb(77, 190, 152);
             !important
         }
-
+        .footerColor{
+            background-color: darkcyan;
+        }
     </style>
 </head>
 <body>
@@ -88,7 +90,7 @@
       </section>
       <section class="container-fluid">
           <article class="row">
-              <div class="col-xs-12 col-sm-6">
+              <div class="col-xs-12 col-sm-5">
                   <img src="../imagenes/clipubicacion.png" alt="Ubicación" eight="50" width="50">
                   <h2>Ubicación</h2>
                   <p>Estamos ubicados en <br> 
@@ -98,12 +100,50 @@
                      coordinar la visita a la zona más <br> 
                      cercana.</p>
               </div>
-              <div class="col-xs-12 col-sm-6">
+              <div class="col-xs-12 col-sm-7">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11041.468131416621!2d-58.438214019481286!3d-34.63833166077508!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbb7065d907f%3A0x9ce77385d2f35dd3!2sParque%20Chacabuco%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1642451711231!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22090.07553190264!2d-58.570794406039425!3d-34.61150984105897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8698cab7fa3%3A0xc4d83fe138c75b6f!2sCaseros%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1642451961437!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
               </div>
           </article>
       </section>
+      <section class="container-fluid">
+          <article class="row">
+              <div class="col-xs12 col-sm-6">
+                  <h3>Ubicación</h3>
+                  <img src="../imagenes/whatsapp.png" alt="whatsapp" class="img-fluid" height="50px" width="50px" >
+                  <a href="https://wa.me/5491134263121" target="blank" >1134263121</a> 
+                  <br>
+                  <img src="../imagenes/facebook.png" alt="facebook" class="img-fluid" height="50px" width="50px">
+                  <a href="https://www.facebook.com/profile.php?id=100075179894331" target="blank" >Zeng Hard</a> 
+                  <br>
+                  <img src="../imagenes/instagram.png" alt="instagram" class="img-fluid" height="50px" width="50px" >
+                  <a href="https://www.instagram.com/zeng.hardware/" target="blank" >zeng.hardware</a>
+              </div>
+              <div class="col-xs12 col-sm-6">
+                <form action="enviar.php" method="get" enctype="application/x-www-form-urlencoded" >
+                    <input type="email" required name="mail" placeholder="Gmail" >
+                    <br>
+                    <input type="text" name="name" placeholder="Nombre" >
+                    <br>
+                    <textarea name="mensaje" placeholder="Mensaje" cols="35" rows="12" ></textarea> 
+                    <input type="submit" >
+                </form>
+              </div>
+          </article>
+      </section>
+      <footer class="container-fluid footerColor">
+          <div class="row">
+              <div class="col-12">
+                <h4>Copyright - todos los derechos reservados</h4>
+                <strong>-Atención full time por cualquier vía todos los días-</strong> 
+                <br>
+                <p>Apoya nuestro trabajo siguiendonos en nuestras redes!</p>
+                <br>
+                <a href="https://www.instagram.com/zeng.hardware/" target="blank" >instagram</a>
+                <a href="https://www.facebook.com/profile.php?id=100075179894331" target="blank" >facebook</a>
+              </div>
+          </div>
+      </footer>
     <!-- Código bootstrap (ignorar) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
