--- a/Principal/index.html
+++ b/Principal/index.html
@@ -5,23 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="../imagenes/shorcutlogo.png">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="estilo.css">
     <title>Zen G: Servicio Técnico PC</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        .navbar{
-            background-color: rgb(77, 190, 152);
-            !important
-        }
-        .footerColor{
-            background-color: darkcyan;
-        }
-    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -36,7 +22,7 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Servicios</a>
+              <a class="nav-link" href="../Servicios/Servicios.html">Servicios</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Reparaciones</a>
