--- a/Servicios/Servicios.html
+++ b/Servicios/Servicios.html
@@ -4,71 +4,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shorcut icon" href="../imagenes/shorcutlogo.png">
+    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="estilo.css">
     <title>Zen G: Servicio Técnico PC</title>
-    <link rel="shortcut icon" href="../imagenes/shorcutlogo.png">
-    <link rel="stylesheet" href="estilo.css">       
 </head>
 <body>
-    <header>
-        <img src="../imagenes/logo1.png" alt="Zen G Hardware" eight="100" width="100" >
-        <h1>ZEN G - HARDWARE & SERVICE </h1 >
-            <nav>
-                <ul class="ubi">
-                    <li ><a href="../index.html" >Home</a></li>
-                    <li ><a href="servicios.html" >Servicios</a></li>
-                    <li ><a href="../reparaciones/Reparaciones.html" >Reparaciones</a></li>
-                    <li ><a href="../index.html" >Contacto</a></li>
-                </ul>
-                
-            </nav>           
-    </header>
-<main>
-    <img src="../imagenes/portadaservicios.jpg" alt="Servicio Técnico">
-</main>
-
-<section>
-        <img src="../imagenes/armados.jpg" alt="armados" class="imgArmados">
-     <p class="pArmados">Instalación y configuración de componentes y periféricos. <br>
-        Armado de pc a medida con todo tipo de hardware. <br>
-        Armados para todo tipo de gama y precio. <br>
-        Eliminación de todo tipo de virus/malware. <br>
-        Prevención de infecciones. <br>
-        Limpieza y mantenimiento de sistemas. <br>
-        Diagnóstico y detección de fallas. <br>
-        Instalación del sistema operativo y software de oficina. <br>
-        Realización e instalación de redes cableadas y wifi. <br>
-        Asesoramiento técnico. <br>
-        Soporte técnico a domicilio y oficinas. <br>
-        Mantenimiento de sistemas operativos. <br>
-        Recuperación de los datos en disco rígido y otros medios de almacenamiento. <br>
-        Reparacion de pc y notebook. Instalación de programas y todo el software que usted requiera.</p>
-</section>
-<section class="aside">
-    <img src="../imagenes/rigminero.jpeg" alt="Rigs Minería" class="imgMinero">
-        <p class="pMinero">Armamos y configuramos los rigs para que rindan al máximo manteniendo la <br> 
-            buena salud de los componentes y al mínimo el consumo eléctrico. <br> 
-            Ofrecemos soluciones escalables, puede comenzar a minar con pocas GPUs <br> 
-            para luego incorporar más unidades de procesamiento al rig. </p>
-            <h2 class="hMinero">Nosotros nos encargamos de todo el armado. Incluye:</h2>
-            <ul class="ulMinero">
-                <li>Infraestructura a precición para una cantidad de placas en específico.</li>
-                <li>Gestión de la compra de placas de video con nuestro proveedor (consultar stock disponible).</li>
-                <li>Armado del hardware base (mother, procesador, ram y disco) al más bajo costo.</li>
-                <li>Instalación y configuración de sistema operativo (a elección).</li>
-                <li>Alta configuración de placas (más rendimiento y menos consumo).</li>
-                <li>Asesoramiento y ayuda técnica de por vida.</li>
-            </ul>
-</section>
-</body>
-<footer> 
-    <div>
-    <h4>Copyright - todos los derechos reservados</h4>
-    <strong>-Atención full time por cualquier vía todos los días-</strong> 
-    <br>
-    <p>Apoya nuestro trabajo siguiendonos en nuestras redes!</p>
-    <br>
-    <a href="https://www.instagram.com/zeng.hardware/" target="blank" >instagram</a>
-    <a href="https://www.facebook.com/profile.php?id=100075179894331" target="blank" >facebook</a>
-    </div>
-</footer>
-</html>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#"><img src="../imagenes/logo1.png" class="img-fluid" width="100px" height="100px" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <h1 class="font-weight-bold">Zen G: Hardware & Service</h1>   
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="../Principal/index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Servicios/Servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Reparaciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contacto</a>
+              </li>
+          </ul>
+      </nav>
+      <section class="container-fluid">
+        <main class="row">
+            <div class="col-12">
+                <img src="../imagenes/portadaservicios.jpg" class="img-fluid" alt="">
+            </div>
+        </main>
+      </section>
+      <section class="container-fluid">
+          <article class="row">
+              <div class="col-xs-12 col-sm-8">
+                <p> Instalación y configuración de componentes y periféricos. <br>
+                    Armado de pc a medida con todo tipo de hardware. <br>
+                    Armados para todo tipo de gama y precio. <br>
+                    Eliminación de todo tipo de virus/malware. <br>
+                    Prevención de infecciones. <br>
+                    Limpieza y mantenimiento de sistemas. <br>
+                    Diagnóstico y detección de fallas. <br>
+                    Instalación del sistema operativo y software de oficina. <br>
+                    Realización e instalación de redes cableadas y wifi. <br>
+                    Asesoramiento técnico. <br>
+                    Soporte técnico a domicilio y oficinas. <br>
+                    Mantenimiento de sistemas operativos. <br>
+                    Recuperación de los datos en disco rígido y otros medios de almacenamiento. <br>
+                    Reparacion de pc y notebook. Instalación de programas y todo el software que usted requiera.</p>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                <img src="../imagenes/armados.jpg" class="img-fluid" alt="armados">
+              </div>
+          </article>
+      </section>
+      <section class="container-fluid">
+          <article class="row">
+              <div class="col-xs-12 col-sm-5">
+                <img src="../imagenes/rigminero.jpeg" alt="Rigs Minería" class="img-fluid">
+              </div>
+              <div class="col-xs-12 col-sm-7">
+                <p> Armamos y configuramos los rigs para que rindan al máximo manteniendo la <br> 
+                    buena salud de los componentes y al mínimo el consumo eléctrico. <br> 
+                    Ofrecemos soluciones escalables, puede comenzar a minar con pocas GPUs <br> 
+                    para luego incorporar más unidades de procesamiento al rig. </p>
+                    <h2>Nosotros nos encargamos de todo el armado. Incluye:</h2>
+                    <ul>
+                        <li>Infraestructura a precición para una cantidad de placas en específico.</li>
+                        <li>Gestión de la compra de placas de video con nuestro proveedor (consultar stock disponible).</li>
+                        <li>Armado del hardware base (mother, procesador, ram y disco) al más bajo costo.</li>
+                        <li>Instalación y configuración de sistema operativo (a elección).</li>
+                        <li>Alta configuración de placas (más rendimiento y menos consumo).</li>
+                        <li>Asesoramiento y ayuda técnica de por vida.</li>
+                    </ul>
+              </div>
+          </article>
+      </section>
+      <footer class="container-fluid footerColor">
+        <div class="row">
+            <div class="col-12">
+              <h4>Copyright - todos los derechos reservados</h4>
+              <strong>-Atención full time por cualquier vía todos los días-</strong> 
+              <br>
+              <p>Apoya nuestro trabajo siguiendonos en nuestras redes!</p>
+              <br>
+              <a href="https://www.instagram.com/zeng.hardware/" target="blank" >instagram</a>
+              <a href="https://www.facebook.com/profile.php?id=100075179894331" target="blank" >facebook</a>
+            </div>
+        </div>
+    </footer>
+          <!-- Código bootstrap (ignorar) -->
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+        <script src="bootstrap.min.js"></script>
+    </body>
