--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shorcut icon" href="../imagenes/shorcutlogo.png">
-    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
+    <link rel="shorcut icon" href="imagenes/shorcutlogo.png">
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="estilo.css">
     <title>Zen G: Servicio Técnico PC</title>
 </head>
 <body>
+    <!-- navegador - inicio -->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><img src="../imagenes/logo1.png" class="img-fluid" width="100px" height="100px" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="imagenes/logo1.png" class="img-fluid" width="100px" height="100px" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +23,7 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Servicios/Servicios.html">Servicios</a>
+              <a class="nav-link" href="Servicios/Servicios.html">Servicios</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Reparaciones</a>
@@ -32,13 +33,11 @@
               </li>
           </ul>
       </nav>
-      <section class="container-fluid">
-          <main class="row">
-              <div class="col-12">
-                  <img src="../imagenes/portada.jpg" class="img-fluid" alt="">
-              </div>
-          </main>
-      </section>
+      <!-- navegador - fin -->
+      <!-- portada - inicio  -->
+      <div class="jumbotron">
+      </div>
+      <!-- portada - fin -->
       <section class="sectionServicios container-fluid">
           <article class="row">
               <div class="col-xs-12 col-sm-8">
@@ -51,7 +50,7 @@
                 </ul>
               </div>
               <div class="col-xs-12 col-sm-4">
-                  <img src="../imagenes/servicios.jpg" class="img-fluid" alt="">
+                  <img src="imagenes/servicios.jpg" class="img-fluid" alt="">
               </div>
           </article>
           </div>
@@ -59,7 +58,7 @@
       <section class="container-fluid">
           <article class="row">
               <div class="col-xs-12 col-sm-8">
-                  <img src="../imagenes/sobrenosotros.jpg" class="img-fluid" alt="">
+                  <img src="imagenes/sobrenosotros.jpg" class="img-fluid" alt="">
               </div>
               <div class="col-xs-12 col-sm-4">
                 <p> Somos técnicos locales con más de 4 años de experiencia en el rubro. <br>
@@ -77,7 +76,7 @@
       <section class="container-fluid">
           <article class="row">
               <div class="col-xs-12 col-sm-5">
-                  <img src="../imagenes/clipubicacion.png" alt="Ubicación" eight="50" width="50">
+                  <img src="imagenes/clipubicacion.png" alt="Ubicación" eight="50" width="50">
                   <h2>Ubicación</h2>
                   <p>Estamos ubicados en <br> 
                     zona Parque Chacabuco (CABA) <br> 
@@ -96,13 +95,13 @@
           <article class="row">
               <div class="col-xs12 col-sm-6">
                   <h3>Ubicación</h3>
-                  <img src="../imagenes/whatsapp.png" alt="whatsapp" class="img-fluid" height="50px" width="50px" >
+                  <img src="imagenes/whatsapp.png" alt="whatsapp" class="img-fluid" height="50px" width="50px" >
                   <a href="https://wa.me/5491134263121" target="blank" >1134263121</a> 
                   <br>
-                  <img src="../imagenes/facebook.png" alt="facebook" class="img-fluid" height="50px" width="50px">
+                  <img src="imagenes/facebook.png" alt="facebook" class="img-fluid" height="50px" width="50px">
                   <a href="https://www.facebook.com/profile.php?id=100075179894331" target="blank" >Zeng Hard</a> 
                   <br>
-                  <img src="../imagenes/instagram.png" alt="instagram" class="img-fluid" height="50px" width="50px" >
+                  <img src="imagenes/instagram.png" alt="instagram" class="img-fluid" height="50px" width="50px" >
                   <a href="https://www.instagram.com/zeng.hardware/" target="blank" >zeng.hardware</a>
               </div>
               <div class="col-xs12 col-sm-6">
