--- a/Servicios/Servicios.html
+++ b/Servicios/Servicios.html
@@ -32,13 +32,19 @@
               </li>
           </ul>
       </nav>
+      <!-- Portada - Inicio -->
       <section class="container-fluid">
         <main class="row">
-            <div class="col-12">
-                <img src="../imagenes/portadaservicios.jpg" class="img-fluid" alt="">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+              <img srcset="../imagenes/portadaservicios.jpg 1900w, ../imagenes/portadaservicios800x650.jpg 800w, ../imagenes/portadaservicios800x650.jpg 400w" src="../imagenes/portadaservicios.jpg" sizes="(min-widht: 1200px) 8vw, (min-widht: 992px) 33vw, (min-widht: 768px) 50v2, 100vw" alt="">
+     
             </div>
+          </div>
         </main>
       </section>
+      <!-- Portada - Fin -->
+      <!-- Servicios - Inicio -->
       <section class="container-fluid">
           <article class="row">
               <div class="col-xs-12 col-sm-8">
@@ -58,14 +64,16 @@
                     Reparacion de pc y notebook. Instalación de programas y todo el software que usted requiera.</p>
               </div>
               <div class="col-xs-12 col-sm-4">
-                <img src="../imagenes/armados.jpg" class="img-fluid" alt="armados">
+                <img src="../imagenes/armados.jpg" class="img-fluid p-4" alt="armados">
               </div>
           </article>
       </section>
+      <!-- Servicios - Fin -->
+      <!-- Rigs mineros- Inicio -->
       <section class="container-fluid">
           <article class="row">
               <div class="col-xs-12 col-sm-5">
-                <img src="../imagenes/rigminero.jpeg" alt="Rigs Minería" class="img-fluid">
+                <img src="../imagenes/rigminero.jpeg" alt="Rigs Minería" class="img-fluid p-4">
               </div>
               <div class="col-xs-12 col-sm-7">
                 <p> Armamos y configuramos los rigs para que rindan al máximo manteniendo la <br> 
@@ -84,19 +92,20 @@
               </div>
           </article>
       </section>
+      <!-- Rigs mineros - Fin -->
+      <!-- Footer - Inicio -->
       <footer class="container-fluid footerColor">
         <div class="row">
             <div class="col-12">
-              <h4>Copyright - todos los derechos reservados</h4>
-              <strong>-Atención full time por cualquier vía todos los días-</strong> 
-              <br>
-              <p>Apoya nuestro trabajo siguiendonos en nuestras redes!</p>
-              <br>
-              <a href="https://www.instagram.com/zeng.hardware/" target="blank" >instagram</a>
-              <a href="https://www.facebook.com/profile.php?id=100075179894331" target="blank" >facebook</a>
+              <h3 class="text-center text-light p-2 ">Copyright - todos los derechos reservados</h3>
+              <p class="text-center lead text-light ">-Atención full time por cualquier vía todos los días-</p> 
+              <p class="text-center text-light ">Apoya nuestro trabajo siguiendonos en nuestras redes!</p>
+              <a href="https://www.instagram.com/zeng.hardware/" target="blank" class="redes d-flex flex-row justify-content-center" >instagram</a>
+              <a href="https://www.facebook.com/profile.php?id=100075179894331" class="redes d-flex flex-row justify-content-center" target="blank" >facebook</a>
             </div>
         </div>
     </footer>
+    <!-- Footer - Fin -->
           <!-- Código bootstrap (ignorar) -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
