--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Zen G: Servicio Técnico PC</title>
 </head>
 <body>
-    <!-- navegador - inicio -->
+    <!-- Navegador - Inicio -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#"><img src="imagenes/logo1.png" class="img-fluid" width="100px" height="100px" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,35 +33,42 @@
               </li>
           </ul>
       </nav>
-      <!-- navegador - fin -->
-      <!-- portada - inicio  -->
-      <div class="jumbotron">
+      <!-- Navegador - Fin -->
+      <!-- Portada - Inicio  -->
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+          <img srcset="imagenes/portada.jpg 1900w, imagenes/portada800x600.jpg 800w, imagenes/portada400x250.jpg 400w" src="imagenes/portada.jpg" sizes="(min-widht: 1200px) 8vw, (min-widht: 992px) 33vw, (min-widht: 768px) 50v2, 100vw" alt="">
+ 
+        </div>
       </div>
-      <!-- portada - fin -->
+      <!-- Portada - Fin -->
+      <!-- Servicios - Inicio -->
       <section class="sectionServicios container-fluid">
           <article class="row">
-              <div class="col-xs-12 col-sm-8">
-                <ul>
-                    <li>Reparación de equipos</li>
-                    <li>Limpieza y mantenimiento de hardware</li>
-                    <li>Configuraciones y optimizaciones de softwares</li>
-                    <li>Limpieza de virus/malware</li>
-                    <li>Actualizaciones y mejoras de rendimiento</li>
+            <div class="col-xs-6 col-sm-4">
+              <img src="imagenes/servicios.jpg" class="img-fluid p-4" alt="">
+          </div>
+              <div class="col-xs-5 col-sm-8">
+                <ul class="text-center ul">
+                    <li class="li">Reparación de equipos</li>
+                    <li class="li">Limpieza y mantenimiento de hardware</li>
+                    <li class="li">Configuraciones y optimizaciones de softwares</li>
+                    <li class="li">Limpieza de virus/malware</li>
+                    <li class="li">Actualizaciones y mejoras de rendimiento</li>
                 </ul>
               </div>
-              <div class="col-xs-12 col-sm-4">
-                  <img src="imagenes/servicios.jpg" class="img-fluid" alt="">
-              </div>
+            </div>
           </article>
-          </div>
       </section>
-      <section class="container-fluid">
+      <!-- Servicios - Fin -->
+      <!-- Sobre nosotros - Inicio -->
+      <section class="sectionSobreNosotros container-fluid">
           <article class="row">
-              <div class="col-xs-12 col-sm-8">
-                  <img src="imagenes/sobrenosotros.jpg" class="img-fluid" alt="">
-              </div>
               <div class="col-xs-12 col-sm-4">
-                <p> Somos técnicos locales con más de 4 años de experiencia en el rubro. <br>
+                  <img src="imagenes/sobrenosotros.jpg" class="img-fluid p-4" alt="">
+              </div>
+              <div class="col-xs-12 col-sm-8">
+                <p class="pSobreNosotros text-center p-4"> Somos técnicos locales con más de 4 años de experiencia en el rubro. <br>
                     A lo largo de nuestro camino, hemos manejado y manipulado más de <br>
                     300 computadoras. Dedicados y apasionados con cada hardware, <br>
                     como si fuese la primera vez que lo hacemos. <br>
@@ -73,39 +80,46 @@
               </div>
           </article>
       </section>
-      <section class="container-fluid">
+      <!-- Sobre nosotros - Fin -->
+      <!-- Ubicación - Inicio -->
+      <section class="sectionUbicacion container-fluid">
           <article class="row">
-              <div class="col-xs-12 col-sm-5">
-                  <img src="imagenes/clipubicacion.png" alt="Ubicación" eight="50" width="50">
-                  <h2>Ubicación</h2>
-                  <p>Estamos ubicados en <br> 
+              <div class="col-xs-12 col-sm-4">
+                  <img src="imagenes/clipubicacion.png" class="img-fluid text-center imgUbicacion" alt="Ubicación" eight="50" width="50">
+                  <span class="spanUbicacion">UBICACIÓN</span>
+                  <p class="pUbicacion text-center">Estamos ubicados en <br> 
                     zona Parque Chacabuco (CABA) <br> 
                     y Caseros (provincia). <br>
                      Contactarse por cualquier vía y <br> 
                      coordinar la visita a la zona más <br> 
                      cercana.</p>
               </div>
-              <div class="col-xs-12 col-sm-7">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11041.468131416621!2d-58.438214019481286!3d-34.63833166077508!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbb7065d907f%3A0x9ce77385d2f35dd3!2sParque%20Chacabuco%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1642451711231!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22090.07553190264!2d-58.570794406039425!3d-34.61150984105897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8698cab7fa3%3A0xc4d83fe138c75b6f!2sCaseros%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1642451961437!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <div class="col-lg-1"></div>
+              <div class="col-xs-12 col-md-12 col-lg-3">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11041.468131416621!2d-58.438214019481286!3d-34.63833166077508!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbb7065d907f%3A0x9ce77385d2f35dd3!2sParque%20Chacabuco%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1642451711231!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" height="300px"class="p-4"></iframe>
+              </div>
+              <div class="col-xs-12 col-md-12 col-lg-2">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22090.07553190264!2d-58.570794406039425!3d-34.61150984105897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8698cab7fa3%3A0xc4d83fe138c75b6f!2sCaseros%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1642451961437!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" height="300px" class="p-4"></iframe>
               </div>
           </article>
       </section>
-      <section class="container-fluid">
+      <!-- Ubicación - Fin -->
+      <!-- Contacto - Inicio -->
+      <section class="sectionContacto container-fluid">
           <article class="row">
-              <div class="col-xs12 col-sm-6">
-                  <h3>Ubicación</h3>
+              <div class="col-xs12 col-sm-4">
+                  <h2 class="text-center">CONTACTO</h2>
                   <img src="imagenes/whatsapp.png" alt="whatsapp" class="img-fluid" height="50px" width="50px" >
-                  <a href="https://wa.me/5491134263121" target="blank" >1134263121</a> 
+                  <a href="https://wa.me/5491134263121" target="blank" class="fontRedes d-flex flex-row justify-content-center alig-items-center" >1134263121</a> 
                   <br>
                   <img src="imagenes/facebook.png" alt="facebook" class="img-fluid" height="50px" width="50px">
-                  <a href="https://www.facebook.com/profile.php?id=100075179894331" target="blank" >Zeng Hard</a> 
+                  <a href="https://www.facebook.com/profile.php?id=100075179894331" target="blank" class="fontRedes d-flex flex-row justify-content-center alig-items-center" >Zeng Hard</a> 
                   <br>
                   <img src="imagenes/instagram.png" alt="instagram" class="img-fluid" height="50px" width="50px" >
-                  <a href="https://www.instagram.com/zeng.hardware/" target="blank" >zeng.hardware</a>
+                  <a href="https://www.instagram.com/zeng.hardware/" target="blank" class="fontRedes d-flex flex-row justify-content-center alig-items-center">zeng.hardware</a>
               </div>
-              <div class="col-xs12 col-sm-6">
-                <form action="enviar.php" method="get" enctype="application/x-www-form-urlencoded" >
+              <div class="col-xs12 col-sm-8">
+                <form action="enviar.php" method="get" class="text-center" enctype="application/x-www-form-urlencoded" >
                     <input type="email" required name="mail" placeholder="Gmail" >
                     <br>
                     <input type="text" name="name" placeholder="Nombre" >
@@ -116,16 +130,15 @@
               </div>
           </article>
       </section>
+      <!-- Contacto - Fin -->
       <footer class="container-fluid footerColor">
           <div class="row">
               <div class="col-12">
-                <h4>Copyright - todos los derechos reservados</h4>
-                <strong>-Atención full time por cualquier vía todos los días-</strong> 
-                <br>
-                <p>Apoya nuestro trabajo siguiendonos en nuestras redes!</p>
-                <br>
-                <a href="https://www.instagram.com/zeng.hardware/" target="blank" >instagram</a>
-                <a href="https://www.facebook.com/profile.php?id=100075179894331" target="blank" >facebook</a>
+                <h3 class="text-center text-light p-2 ">Copyright - todos los derechos reservados</h3>
+                <p class="text-center lead text-light ">-Atención full time por cualquier vía todos los días-</p> 
+                <p class="text-center text-light ">Apoya nuestro trabajo siguiendonos en nuestras redes!</p>
+                <a href="https://www.instagram.com/zeng.hardware/" target="blank" class="redes d-flex flex-row justify-content-center" >instagram</a>
+                <a href="https://www.facebook.com/profile.php?id=100075179894331" class="redes d-flex flex-row justify-content-center" target="blank" >facebook</a>
               </div>
           </div>
       </footer>
