--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="Servicios/Servicios.html">Servicios</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Reparaciones</a>
+                <a class="nav-link" href="reparaciones/reparaciones.html">Reparaciones</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contacto</a>
