Actualización copia zen_g_bootstrap

--- a/index.html
+++ b/index.html
@@ -35,20 +35,22 @@
       </nav>
       <!-- Navegador - Fin -->
       <!-- Portada - Inicio  -->
-      <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
-          <img srcset="imagenes/portada.jpg 1900w, imagenes/portada800x600.jpg 800w, imagenes/portada400x250.jpg 400w" src="imagenes/portada.jpg" sizes="(min-widht: 1200px) 8vw, (min-widht: 992px) 33vw, (min-widht: 768px) 50v2, 100vw" alt="">
+      <div class="home">
+        <div class="landing-text">
+          <h1>SERVICIO TÉCNICO DE PC</h1>
+          <H3>Computadoras - Laptops - Componentes</H3>
  
         </div>
       </div>
       <!-- Portada - Fin -->
       <!-- Servicios - Inicio -->
-      <section class="sectionServicios container-fluid">
+      <section class="sectionServicios container-fluid padding">
           <article class="row">
             <div class="col-xs-6 col-sm-4">
               <img src="imagenes/servicios.jpg" class="img-fluid p-4" alt="">
           </div>
               <div class="col-xs-5 col-sm-8">
+                <h2 class="text-center">Ofrecemos los mejores servicios como técnicos especializados</h2>
                 <ul class="text-center ul">
                     <li class="li">Reparación de equipos</li>
                     <li class="li">Limpieza y mantenimiento de hardware</li>
@@ -62,75 +64,67 @@
       </section>
       <!-- Servicios - Fin -->
       <!-- Sobre nosotros - Inicio -->
-      <section class="sectionSobreNosotros container-fluid">
+      <section class="sectionSobreNosotros container-fluid padding">
           <article class="row">
-              <div class="col-xs-12 col-sm-4">
-                  <img src="imagenes/sobrenosotros.jpg" class="img-fluid p-4" alt="">
+              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <h4>Técnicos especializados en PC</h4>
+                <p class="pSobreNosotros">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, accusamus vel modi reprehenderit nostrum harum temporibus minus impedit aperiam sed aliquid aut non animi illum cum dolore, totam autem esse?
+                Eos expedita quibusdam aliquam doloremque? Maxime praesentium non dolores asperiores quasi ullam et! Deserunt, quos.</p>
               </div>
-              <div class="col-xs-12 col-sm-8">
-                <p class="pSobreNosotros text-center p-4"> Somos técnicos locales con más de 4 años de experiencia en el rubro. <br>
-                    A lo largo de nuestro camino, hemos manejado y manipulado más de <br>
-                    300 computadoras. Dedicados y apasionados con cada hardware, <br>
-                    como si fuese la primera vez que lo hacemos. <br>
-                    Contamos con amplio stock de repuestos y estamos asociados con <br>
-                    proveedores que nos proveen hardware nuevo. <br>
-                    Si tu equipo se encuentra enfermo, no dudes en contactarte con <br>
-                    nosotros y darle ese amor que necesita! Atención tanto a clientes <br>
-                    como a empresas. </p>
+              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <img src="imagenes/reparaciones.png" alt="" class="img-fluid">
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <h5>Apasionados y profesionales</h5>
+                <p class="pSobreNosotros">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ea non laudantium maiores excepturi. Ab tempora excepturi perspiciatis, quis quidem dolore. Magnam, illum velit iste tenetur adipisci iusto explicabo quas?
+                Dignissimos, libero ut. Sint, similique obcaecati! Optio eius explicabo ratione unde perferendis impedit neque aut quis architecto dolorem! Nisi doloribus aliquam qui aut itaque unde molestias maiores totam non velit?</p>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <img src="imagenes/quienessomos.png" alt="" class="img-fluid">
               </div>
           </article>
       </section>
       <!-- Sobre nosotros - Fin -->
-      <!-- Ubicación - Inicio -->
-      <section class="sectionUbicacion container-fluid">
-          <article class="row">
-              <div class="col-xs-12 col-sm-4">
-                  <img src="imagenes/clipubicacion.png" class="img-fluid text-center imgUbicacion" alt="Ubicación" eight="50" width="50">
-                  <span class="spanUbicacion">UBICACIÓN</span>
-                  <p class="pUbicacion text-center">Estamos ubicados en <br> 
-                    zona Parque Chacabuco (CABA) <br> 
-                    y Caseros (provincia). <br>
-                     Contactarse por cualquier vía y <br> 
-                     coordinar la visita a la zona más <br> 
-                     cercana.</p>
-              </div>
-              <div class="col-lg-1"></div>
-              <div class="col-xs-12 col-md-12 col-lg-3">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11041.468131416621!2d-58.438214019481286!3d-34.63833166077508!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbb7065d907f%3A0x9ce77385d2f35dd3!2sParque%20Chacabuco%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1642451711231!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" height="300px"class="p-4"></iframe>
-              </div>
-              <div class="col-xs-12 col-md-12 col-lg-2">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22090.07553190264!2d-58.570794406039425!3d-34.61150984105897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8698cab7fa3%3A0xc4d83fe138c75b6f!2sCaseros%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1642451961437!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" height="300px" class="p-4"></iframe>
-              </div>
-          </article>
-      </section>
-      <!-- Ubicación - Fin -->
-      <!-- Contacto - Inicio -->
-      <section class="sectionContacto container-fluid">
-          <article class="row">
-              <div class="col-xs12 col-sm-4">
-                  <h2 class="text-center">CONTACTO</h2>
-                  <img src="imagenes/whatsapp.png" alt="whatsapp" class="img-fluid" height="50px" width="50px" >
-                  <a href="https://wa.me/5491134263121" target="blank" class="fontRedes d-flex flex-row justify-content-center alig-items-center" >1134263121</a> 
-                  <br>
-                  <img src="imagenes/facebook.png" alt="facebook" class="img-fluid" height="50px" width="50px">
-                  <a href="https://www.facebook.com/profile.php?id=100075179894331" target="blank" class="fontRedes d-flex flex-row justify-content-center alig-items-center" >Zeng Hard</a> 
-                  <br>
-                  <img src="imagenes/instagram.png" alt="instagram" class="img-fluid" height="50px" width="50px" >
-                  <a href="https://www.instagram.com/zeng.hardware/" target="blank" class="fontRedes d-flex flex-row justify-content-center alig-items-center">zeng.hardware</a>
-              </div>
-              <div class="col-xs12 col-sm-8">
-                <form action="enviar.php" method="get" class="text-center" enctype="application/x-www-form-urlencoded" >
-                    <input type="email" required name="mail" placeholder="Gmail" >
-                    <br>
-                    <input type="text" name="name" placeholder="Nombre" >
-                    <br>
-                    <textarea name="mensaje" placeholder="Mensaje" cols="35" rows="12" ></textarea> 
-                    <input type="submit" >
-                </form>
-              </div>
-          </article>
-      </section>
-      <!-- Contacto - Fin -->
+            <!-- Contacto - Inicio -->
+      <div class="imgContacto">
+        <div class="row col-xs-12 col-sm-4 contacto">
+          <h5>CONTÁCTANOS</h5>
+          <p class="pcontacto">Atención 24hrs</p>
+          <img src="imagenes/whatsapp.png" alt="whatsapp" class="img-fluid" height="50px" width="50px" >
+          <a href="https://wa.me/5491134263121" target="blank" class="fontContacto w p-2" >1134263121</a>
+          <br>
+          <img src="imagenes/facebook.png" alt="facebook" class="img-fluid" height="50px" width="50px">
+          <a href="https://www.facebook.com/profile.php?id=100075179894331" target="blank" class="fontContacto fb p-2" >Zeng Hard</a>
+          <br>
+          <img src="imagenes/instagram.png" alt="instagram" class="img-fluid" height="50px" width="50px" >
+          <a href="https://www.instagram.com/zeng.hardware/" target="blank" class="fontContacto ig p-2">zeng.hardware</a>
+        </div>
+        <div class="col-sm-8"></div>
+      </div>
+            <!-- Contacto - Fin -->
+            <!-- Ubicación - Inicio -->
+      <section class="sectionUbicacion container-fluid padding">
+        <article class="row">
+            <div class="col-xs-12 col-sm-4">
+                <img src="imagenes/clipubicacion.png" class="img-fluid text-center imgUbicacion" alt="Ubicación" eight="50" width="50">
+                <span class="spanUbicacion">UBICACIÓN</span>
+                <p class="pUbicacion text-center">Estamos ubicados en <br> 
+                  zona Parque Chacabuco (CABA) <br> 
+                  y Caseros (provincia). <br>
+                   Contactarse por cualquier vía y <br> 
+                   coordinar la visita a la zona más <br> 
+                   cercana.</p>
+            </div>
+            <div class="col-lg-1"></div>
+            <div class="col-xs-12 col-md-12 col-lg-3">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11041.468131416621!2d-58.438214019481286!3d-34.63833166077508!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbb7065d907f%3A0x9ce77385d2f35dd3!2sParque%20Chacabuco%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1642451711231!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" height="300px"class="p-4"></iframe>
+            </div>
+            <div class="col-xs-12 col-md-12 col-lg-2">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22090.07553190264!2d-58.570794406039425!3d-34.61150984105897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8698cab7fa3%3A0xc4d83fe138c75b6f!2sCaseros%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1642451961437!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" height="300px" class="p-4"></iframe>
+            </div>
+        </article>
+    </section>
+    <!-- Ubicación - Fin -->
       <footer class="container-fluid footerColor">
           <div class="row">
               <div class="col-12">
