--- a/Servicios/Servicios.html
+++ b/Servicios/Servicios.html
@@ -7,7 +7,12 @@
     <link rel="shorcut icon" href="../imagenes/shorcutlogo.png">
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="estilo.css">
-    <title>Zen G: Servicio Técnico PC</title>
+    <title>Servicios - Zen G Hardware</title>
+    <meta name="description" content="Servicio tecnico de pc, reparacion de pc, soporte tecnico y mantenimiento de pc, servicio tecnico de computadoras, tecnico de pc">
+    <meta name="keywords" content="Servicio Tecnico y reparacion de PC a Domicilio, Tecnico de PC a domicilio en capital federal, 
+    Tecnico en PC, reparacion de notebook a domicilio en el dia, soporte tecnico de pc, mantenimiento de pc, servicio tecnico de computadoras, reparacion chip de video, servicio tecnico de notebook a domicilio urgente, servicio tecnico de pc, service de pc y redes, arreglo de computadoras a domicilio, internet mantenimiento y reparacion de pc, servicio técnico de computadoras, Reparación y arreglo de computadoras, reparacion máquinas pc, notebooks armado de pc, mantenimiento y reparación de pcs, servicio técnico 
+    personalizado, soluciones informaticas en computacion , soporte tecnico computación, armado de computadoras reparación y mantenimiento de pc, tecnico de notebook, reparar notebook, reparar laptop, arreglos de computadoras a domicilio, service de pc, reparación de pc a domicilio, configuración redes wi-fi, abonos de mantenimiento y limpieza virus, soporte y service para pc, 
+    mantenimiento y reparación de laptop a domicilio, instalación de hardware y software, soporte informatico para pc, mantenimiento de computadoras y reparaciones, soluciones informaticas, soporte técnico y mantenimiento, configuración de equipos de computación, limpieza de virus spywares troyanos, recuperación de información, Reparacion de computadoras en capital federal a domicilio.">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -22,33 +27,31 @@
               <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Servicios/Servicios.html">Servicios</a>
+              <a class="nav-link" href="#">Servicios</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Reparaciones</a>
+                <a class="nav-link" href="../reparaciones/reparaciones.html">Reparaciones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="../contacto/contacto.html">Contacto</a>
               </li>
           </ul>
       </nav>
       <!-- Portada - Inicio -->
-      <section class="container-fluid">
-        <main class="row">
-          <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
-              <img srcset="../imagenes/portadaservicios.jpg 1900w, ../imagenes/portadaservicios800x650.jpg 800w, ../imagenes/portadaservicios800x650.jpg 400w" src="../imagenes/portadaservicios.jpg" sizes="(min-widht: 1200px) 8vw, (min-widht: 992px) 33vw, (min-widht: 768px) 50v2, 100vw" alt="">
-     
-            </div>
-          </div>
-        </main>
-      </section>
+      <div class="home">
+        <div class="landing-text">
+          <h1>SERVICIOS</h1>
+        </div>
+      </div>
       <!-- Portada - Fin -->
       <!-- Servicios - Inicio -->
-      <section class="container-fluid">
+      <section class="sectionArmados container-fluid padding">
           <article class="row">
-              <div class="col-xs-12 col-sm-8">
-                <p> Instalación y configuración de componentes y periféricos. <br>
+            <div class="col-xs-6 col-sm-4">
+              <img src="../imagenes/armados.jpg" class="img-fluid p-4" height="500px" width="500px" alt="armados">
+            </div>
+              <div class="col-xs-6 col-sm-8">
+                <p class="fontArmados"> Instalación y configuración de componentes y periféricos. <br>
                     Armado de pc a medida con todo tipo de hardware. <br>
                     Armados para todo tipo de gama y precio. <br>
                     Eliminación de todo tipo de virus/malware. <br>
@@ -63,31 +66,28 @@
                     Recuperación de los datos en disco rígido y otros medios de almacenamiento. <br>
                     Reparacion de pc y notebook. Instalación de programas y todo el software que usted requiera.</p>
               </div>
-              <div class="col-xs-12 col-sm-4">
-                <img src="../imagenes/armados.jpg" class="img-fluid p-4" alt="armados">
-              </div>
           </article>
       </section>
       <!-- Servicios - Fin -->
       <!-- Rigs mineros- Inicio -->
-      <section class="container-fluid">
+      <section class="container-fluid padding">
           <article class="row">
               <div class="col-xs-12 col-sm-5">
                 <img src="../imagenes/rigminero.jpeg" alt="Rigs Minería" class="img-fluid p-4">
               </div>
               <div class="col-xs-12 col-sm-7">
-                <p> Armamos y configuramos los rigs para que rindan al máximo manteniendo la <br> 
+                <p class="fontRigs"> Armamos y configuramos los rigs para que rindan al máximo manteniendo la <br> 
                     buena salud de los componentes y al mínimo el consumo eléctrico. <br> 
                     Ofrecemos soluciones escalables, puede comenzar a minar con pocas GPUs <br> 
                     para luego incorporar más unidades de procesamiento al rig. </p>
                     <h2>Nosotros nos encargamos de todo el armado. Incluye:</h2>
                     <ul>
-                        <li>Infraestructura a precición para una cantidad de placas en específico.</li>
-                        <li>Gestión de la compra de placas de video con nuestro proveedor (consultar stock disponible).</li>
-                        <li>Armado del hardware base (mother, procesador, ram y disco) al más bajo costo.</li>
-                        <li>Instalación y configuración de sistema operativo (a elección).</li>
-                        <li>Alta configuración de placas (más rendimiento y menos consumo).</li>
-                        <li>Asesoramiento y ayuda técnica de por vida.</li>
+                        <li class="li">Infraestructura a precición para una cantidad de placas en específico.</li>
+                        <li class="li">Gestión de la compra de placas de video con nuestro proveedor (consultar stock disponible).</li>
+                        <li class="li">Armado del hardware base (mother, procesador, ram y disco) al más bajo costo.</li>
+                        <li class="li">Instalación y configuración de sistema operativo (a elección).</li>
+                        <li class="li">Alta configuración de placas (más rendimiento y menos consumo).</li>
+                        <li class="li">Asesoramiento y ayuda técnica de por vida.</li>
                     </ul>
               </div>
           </article>
