--- a/reparaciones/reparaciones.html
+++ b/reparaciones/reparaciones.html
@@ -4,18 +4,103 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SASS</title>
+    <link rel="shorcut icon" href="../imagenes/shorcutlogo.png">
+    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="estilo.css">
+    <title>Reparaciones - Zen G Hardware</title>
+    <meta name="description" content="Servicio tecnico de pc, reparacion de pc, soporte tecnico y mantenimiento de pc, servicio tecnico de computadoras, tecnico de pc">
+    <meta name="keywords" content="Servicio Tecnico y reparacion de PC a Domicilio, Tecnico de PC a domicilio en capital federal, 
+    Tecnico en PC, reparacion de notebook a domicilio en el dia, soporte tecnico de pc, mantenimiento de pc, servicio tecnico de computadoras, reparacion chip de video, servicio tecnico de notebook a domicilio urgente, servicio tecnico de pc, service de pc y redes, arreglo de computadoras a domicilio, internet mantenimiento y reparacion de pc, servicio técnico de computadoras, Reparación y arreglo de computadoras, reparacion máquinas pc, notebooks armado de pc, mantenimiento y reparación de pcs, servicio técnico 
+    personalizado, soluciones informaticas en computacion , soporte tecnico computación, armado de computadoras reparación y mantenimiento de pc, tecnico de notebook, reparar notebook, reparar laptop, arreglos de computadoras a domicilio, service de pc, reparación de pc a domicilio, configuración redes wi-fi, abonos de mantenimiento y limpieza virus, soporte y service para pc, 
+    mantenimiento y reparación de laptop a domicilio, instalación de hardware y software, soporte informatico para pc, mantenimiento de computadoras y reparaciones, soluciones informaticas, soporte técnico y mantenimiento, configuración de equipos de computación, limpieza de virus spywares troyanos, recuperación de información, Reparacion de computadoras en capital federal a domicilio.">
 </head>
 <body>
-    <header>
-        <h1>Entregable de <span>SASS</span></h1>
-    </header>
-    <main>
-        <img src="../imagenes/gato-acostado.png" alt="">
-    </main>
-    <footer>
-        <h2>Todos los derechos reservados</h2>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#"><img src="../imagenes/logo1.png" class="img-fluid" width="100px" height="100px" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <h1 class="font-weight-bold">Zen G: Hardware & Service</h1>   
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Servicios/Servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Reparaciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../contacto/contacto.html">Contacto</a>
+              </li>
+          </ul>
+      </nav>
+      <!-- Portada - Inicio -->
+      <div class="home">
+        <div class="landing-text">
+          <h1>REPARACIONES</h1>
+        </div>
+      </div>
+      <!-- Portada - Fin -->
+      <!-- Servicios - Inicio -->
+      <section class="sectionSoluciones container-fluid padding">
+          <article class="row">
+            <div class="col-xs-6 col-sm-4">
+              <img src="../imagenes/soluciones.jpg" class="img-fluid p-4" height="500px" width="500px" alt="soluciones">
+            </div>
+              <div class="col-xs-6 col-sm-8">
+                <p class="pReparaciones">Ofrecemos soluciones a todos los problemas causados
+                    por software y hardware (programas, componentes,
+                    periféricos, etc) de su PC. <br>
+                    También, brindamos servicio y soporte a domicilio, se
+                    realiza una visita en la que se observa y se diagnostica,
+                    y de ser posible lo reparamos al momento, en caso de que
+                    sea un trabajo que requiera un mayor esfuerzo, precisión,
+                    herramientas, nos traemos el equipo a nuestro taller y
+                    cuando esté reparado podrá acercarse a retirar o si desea
+                    se lo llevamos nuevamente a su domicilio. <br>
+                    Por todo componente que sea necesario reemplazar,
+                    ofrecemos factura y entregamos la pieza cambiada.</p>
+              </div>
+          </article>
+      </section>
+      <!-- Servicios - Fin -->
+      <!-- Rigs mineros- Inicio -->
+      <section class="container-fluid padding">
+          <article class="row">
+              <div class="col-xs-12 col-sm-5">
+                <img src="../imagenes/proveedores.jpg" alt="proveedores" class="img-fluid p-4">
+              </div>
+              <div class="col-xs-12 col-sm-7">
+                  <h2>ESTAMOS ASOCIADOS CON PROVEEDORES</h2>
+                <p class="pProve"> <strong>Contamos con un amplio stock de provedores de Hardware.</strong> <br>
+                    Por este motivo es que podemos brindar soluciones rápidas a los pedidos <br> 
+                    de servicio técnico cuando el no funcionamiento de su pc es producido <br> 
+                    por la avería de un componente, tan solo nos basta con un llamado y <br>
+                    tener una pieza nueva en disposición.</p> 
+              </div>
+          </article>
+      </section>
+      <!-- Rigs mineros - Fin -->
+      <!-- Footer - Inicio -->
+      <footer class="container-fluid footerColor">
+        <div class="row">
+            <div class="col-12">
+              <h3 class="text-center text-light p-2 ">Copyright - todos los derechos reservados</h3>
+              <p class="text-center lead text-light ">-Atención full time por cualquier vía todos los días-</p> 
+              <p class="text-center text-light ">Apoya nuestro trabajo siguiendonos en nuestras redes!</p>
+              <a href="https://www.instagram.com/zeng.hardware/" target="blank" class="redes d-flex flex-row justify-content-center" >instagram</a>
+              <a href="https://www.facebook.com/profile.php?id=100075179894331" class="redes d-flex flex-row justify-content-center" target="blank" >facebook</a>
+            </div>
+        </div>
     </footer>
+    <!-- Footer - Fin -->
+          <!-- Código bootstrap (ignorar) -->
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+        <script src="bootstrap.min.js"></script>
 </body>
 </html>
