--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="reparaciones/reparaciones.html">Reparaciones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="#idcontacto">Contacto</a>
               </li>
           </ul>
       </nav>
@@ -92,7 +92,7 @@
       <!-- Sobre nosotros - Fin -->
             <!-- Contacto - Inicio -->
       <div class="imgContacto">
-        <div class="row col-xs-12 col-sm-4 contacto">
+        <div id="idcontacto" class="row col-xs-12 col-sm-4 contacto">
           <h5>CONTÁCTANOS</h5>
           <p class="pcontacto">Atención 24hrs</p>
           <img src="imagenes/whatsapp.png" alt="whatsapp" class="img-fluid" height="50px" width="50px" >
