--- a/reparaciones/reparaciones.html
+++ b/reparaciones/reparaciones.html
@@ -15,6 +15,7 @@
     mantenimiento y reparación de laptop a domicilio, instalación de hardware y software, soporte informatico para pc, mantenimiento de computadoras y reparaciones, soluciones informaticas, soporte técnico y mantenimiento, configuración de equipos de computación, limpieza de virus spywares troyanos, recuperación de información, Reparacion de computadoras en capital federal a domicilio.">
 </head>
 <body>
+    <!-- Navegador - Inicio -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#"><img src="../imagenes/logo1.png" class="img-fluid" width="100px" height="100px" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,10 +34,11 @@
                 <a class="nav-link" href="#">Reparaciones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../contacto/contacto.html">Contacto</a>
+                <a class="nav-link" href="../index.html">Contacto</a>
               </li>
           </ul>
       </nav>
+      <!-- Navegador - Fin -->
       <!-- Portada - Inicio -->
       <div class="home">
         <div class="landing-text">
@@ -44,7 +46,7 @@
         </div>
       </div>
       <!-- Portada - Fin -->
-      <!-- Servicios - Inicio -->
+      <!-- Soluciones - Inicio -->
       <section class="sectionSoluciones container-fluid padding">
           <article class="row">
             <div class="col-xs-6 col-sm-4">
@@ -66,8 +68,8 @@
               </div>
           </article>
       </section>
-      <!-- Servicios - Fin -->
-      <!-- Rigs mineros- Inicio -->
+      <!-- Soluciones - Fin -->
+      <!-- Proveedores - Inicio -->
       <section class="container-fluid padding">
           <article class="row">
               <div class="col-xs-12 col-sm-5">
@@ -83,7 +85,7 @@
               </div>
           </article>
       </section>
-      <!-- Rigs mineros - Fin -->
+      <!-- Proveedores - Fin -->
       <!-- Footer - Inicio -->
       <footer class="container-fluid footerColor">
         <div class="row">
