--- a/Servicios/Servicios.html
+++ b/Servicios/Servicios.html
@@ -15,6 +15,7 @@
     mantenimiento y reparación de laptop a domicilio, instalación de hardware y software, soporte informatico para pc, mantenimiento de computadoras y reparaciones, soluciones informaticas, soporte técnico y mantenimiento, configuración de equipos de computación, limpieza de virus spywares troyanos, recuperación de información, Reparacion de computadoras en capital federal a domicilio.">
 </head>
 <body>
+    <!-- Navegador - Inicio -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#"><img src="../imagenes/logo1.png" class="img-fluid" width="100px" height="100px" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,10 +34,11 @@
                 <a class="nav-link" href="../reparaciones/reparaciones.html">Reparaciones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../contacto/contacto.html">Contacto</a>
+                <a class="nav-link" href="../index.html">Contacto</a>
               </li>
           </ul>
       </nav>
+      <!-- Navegador - Fin -->
       <!-- Portada - Inicio -->
       <div class="home">
         <div class="landing-text">
